# agora

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  rust-toolchain  test_one.sh  test_smart_contract.py  test_verify_sfi_all.sh  test_verify_sfi_one.sh  verify_ifc.sh
.github/workflows/: rust.yml
assertion_generator/: README.md
assertion_generator/confllvm/: Cargo.toml
assertion_generator/confllvm/src/: dis.rs  main.rs
assertion_generators/lfence/: Cargo.toml
assertion_generators/lfence/src/: main.rs
assertion_generators/veriwasm_proofgen/src/analyses/: jump_analyzer.rs  mod.rs
assertion_generators/veriwasm_proofgen/src/checkers/: heap_checker.rs
assertion_generators/veriwasm_proofgen/src/ir/: utils.rs  x64.rs
assertion_generators/veriwasm_proofgen/src/lattices/: regslattice.rs  stackgrowthlattice.rs
assertion_generators/veriwasm_proofgen/src/loaders/: lucet.rs
assertion_generators/wasm_sfi/: Cargo.toml  postprocess.py  proof_gen.sh
assertion_generators/wasm_sfi/src/analyses/: call_analyzer.rs  heap_analyzer.rs  reaching_defs.rs  stack_analyzer.rs
assertion_generators/wasm_sfi/src/checkers/: stack_checker.rs
assertion_generators/wasm_sfi/src/lattices/: mod.rs
assertion_generators/wasm_sfi/src/runner/: mod.rs
assertion_generators/wasm_sfi/tests/: testing.rs
checker/: Cargo.toml  debug.md
checker/src/: dis.rs  lib.rs  main.rs  semantics.rs  solve.rs  ssa.rs  utils.rs  validate.rs
checker/src/policy/: ifc.rs  lfence.rs  mod.rs  wasmsfi.rs
checker/tests/: demo_test.rs  dis_tests.rs  disasm_regression_test.rs  spec_tests.rs  ssa_test.rs
contracts/: Artifacts.md  README.md  btm-cost.py  contract.sol
contracts/deploy/: Makefile  config  config.json  deploy.manifest.template  deploy.py
contracts/interact/: Makefile  config  config.json  interact.manifest.template  main.py  private_key
contracts/interact/utils/: blockchain.py  compile.py  config.py  interact.py  ipfs.py
disasm/: Cargo.toml
disasm/src/: cfg.rs  dis.rs  lib.rs  main.rs
eval/: run_workflow.py
iced-asm/: Cargo.toml
iced-asm/src/: block_enc.rs  code.rs  constant_offsets.rs  data_reader.rs  encoder.rs  enums.rs  iced_constants.rs  iced_error.rs  iced_features.rs  instruction.rs  instruction_internal.rs  lib.rs  memory_size.rs  mnemonic.rs  register.rs  tuple_type_tbl.rs
iced-asm/src/block_enc/: block.rs  enums.rs
iced-asm/src/block_enc/instr/: call_instr.rs  ip_relmem_instr.rs  jcc_instr.rs  jmp_instr.rs  mod.rs  simple_br_instr.rs  simple_instr.rs  xbegin_instr.rs
iced-asm/src/encoder/: enums.rs  handlers_table.rs  instruction_fmt.rs  mem_op.rs  op_code.rs  op_code_fmt.rs  op_code_handler.rs  op_code_tbl.rs  ops.rs
iced-asm/src/info/: enums.rs  factory.rs  mod.rs
iced-asm/src/mvex/: mod.rs  mvex_info.rs
ir/: Cargo.toml
ir/src/: ast.rs  lib.rs  prf.rs  smt.rs  ssa.rs  traits.rs  typer.rs  utils.rs
parser/: Cargo.toml  README.md  sample.prf
parser/src/: lib.rs  parse.rs  proof.pest
parser/tests/: parser_test.rs
resources/: README.md  build_fence.py  build_spec.py  clean.sh
resources/fence/: astar_O0  astar_O3  bzip2_O0  bzip2_O3  h264ref_O0  h264ref_O3  lbm_O0  lbm_O3  lfence.cfg  lfence_o3.cfg  libquantum_O0  libquantum_O3  mcf_O0  mcf_O3  milc_O0  milc_O3  namd_O0  namd_O3  povray_O0  povray_O3  sjeng_O0  sjeng_O3
resources/ifc/unit_test/: test.asm  test.bc  test.c
resources/safestack/: Makefile  brloopss.ll  test.c  test.ll  testss.ll
resources/spec2006/: astar_O0  astar_O0.wasm  astar_O3  astar_O3.wasm  bzip2_O0  bzip2_O0.wasm  bzip2_O3  bzip2_O3.wasm  gobmk_O3.wasm  h264ref_O0.wasm  h264ref_O3.wasm  lbm_O0  lbm_O0.wasm  lbm_O3  lbm_O3.wasm  libquantum_O0  libquantum_O0.wasm  libquantum_O3  libquantum_O3.wasm  lucet_wasm.cfg  lucet_wasm_o3.cfg  mcf_O0  mcf_O0.wasm  mcf_O3  mcf_O3.wasm  milc_O0  milc_O0.wasm  milc_O3  milc_O3.wasm  namd_O0  namd_O0.wasm  namd_O3  namd_O3.wasm  sjeng_O0  sjeng_O0.wasm  sjeng_O3  sjeng_O3.wasm
