[package]
name = "disasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced-x86 = {version = "1.18.0", features = ["serde"]}
anyhow = "1.0"
clap = { version = "3.2.22", features = ["derive"] }
object = "0.29"
log = "0.4"
env_logger = "0.9"
serde = "1.0"
serde_json = "1.0"
petgraph = "0.6"
