[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.0"
pest_derive = "2.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.9"
rsmt2 = "0.16.0"
ir = { path = "../ir" }